chore: modernize streams, fix selectedIndex defaults, refactor renderNode, and improve findInLines
- Replace Collectors.toList() with Stream.toList() in MojoHelper
- Return -1 from selectedIndex() in SearchTui/TreeTui for consistency with UpdatesTui/AnalyzeTui
- Use selectedIndex() helper in SearchTui renderArtifactDetails/fetchPomInfoIfNeeded
- Extract renderLeafElement/renderContainerElement/renderEmptyElement/addTagOpen/addTagClose from XmlTreeModel.renderNode
- Fix PomTui.findInLines to match self-closing tags and disambiguate same-named siblings

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>